<resources>
    <string name="app_name">Cabinety</string>
    <string name="app_logo">Clinic Logo</string>
    <string name="fullname">Full Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back_to_login">Have an account? log in.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="admin_user">649369196</string>
    <string name="admin_password">root@root1</string>
    <string name="patient_list">List of Patients</string>
    <string name="home">Home</string>
    <string name="appointments_list">Appointments</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="admin_add">Add a patient</string>
    <string name="admin_edit">Edit a patient</string>
    <string name="admin_remove">Remove a patient</string>
    <string name="card_schedule">Schedule</string>
    <string name="admin_message">Hello Mr admin</string>
    <string name="logout_title">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Field_allergies">Allergies</string>
    <string name="Field_bloodtype">Blood Type</string>
    <string name="Field_medicalhistory">Medical History</string>
    <string name="Button_addpatient">Save Patient</string>
    <string name="Text_medicalinfo">Medical Information</string>
    <string name="Field_address">Address</string>
    <string name="Field_email">Email</string>
    <string name="Field_phonenumber">Phone Number</string>
    <string name="Text_contactinfo">Contact Information</string>
    <string name="Field_gender">Gender</string>
    <string name="Field_dob">Date of Birth</string>
    <string name="Field_lastname">Last Name</string>
    <string name="Field_firstname">First Name</string>
    <string name="Text_personnalinfo">Personal Information</string>
    <string name="text_allergies">Allergies</string>
    <string name="date_of_birth_format">Date of Birth: %s</string>
    <string name="gender_format">Gender: %s</string>
    <string name="blood_type_format">Blood Type: %s</string>
    <string name="no_allergies">No known allergies</string>
    <string name="no_medical_history">No medical history available</string>
    <string name="accept">accept</string>
    <string name="cancel">cancel</string>
    <string name="reject">reject\n</string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="appointment_statuses">
        <item>CONFIRMED</item>
        <item>PENDING</item>
        <item>CANCELLED</item>
        <item>REJECTED</item>
    </string-array>

    <string-array name="blood_type_options">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
        <item>Unknown</item>
    </string-array>

</resources>